--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Daniel Afriyie Gyimah",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fast-csv": "^4.3.1",
     "moment": "^2.27.0",
